--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Welcome to my personal blog: TyataEssence - a space where complexity meets clarity
+title: Welcome to TyataEssence blog - a space where complexity meets clarity!
 author: Rakesh Tyata
 email: tyataessence@gmail.com
 description: "I share my thoughts and insights across Technical, Personal, and Social topics with a focus on making them easier to understand and apply. Whether it’s breaking down complex tech concepts, reflecting on personal growth, or exploring social ideas, my goal is to simplify information into practical takeaways that anyone can relate to.
