updating the layout for placeholder

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ sidebar:
     bio: "Blogger, Developer, Thinker. Simplifying ideas across Technical, Personal, and Trending topics."
     image: "/assets/images/rakesh_headshot.jpg"  # place profile image here
     links:
-      github: "https://github.com/rtyata01"
+      portfolio: "https://rtyata01.github.io/"
       youtube: "https://youtube.com/tyataessence"
       linkedin: "https://linkedin.com/in/rtyata"
 
