--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ show_sidebar: true
 sidebar:
   author:
     name: "Rakesh Tyata"
-    bio: "Blogger, Developer, Thinker. Simplifying ideas across Technical, Personal, and Trending topics."
+    bio: "Blogger | Developer | Thinker — making complex ideas simple, from tech to personal insights and trending stories."
     image: "/assets/images/rakesh_headshot.jpg"  # place profile image here
     links:
       portfolio: "https://rtyata01.github.io/"
