--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,12 @@ sidebar:
     links:
       View My Portfolio: "https://rtyata01.github.io/"
       View My Youtube: "https://youtube.com/tyataessence"
-      View My linkedin: "https://linkedin.com/in/rtyata"
+      View My Linkedin: "https://linkedin.com/in/rtyata"
+  
+  categories:
+    - Personal
+    - Technical
+    - Trending
 
 # Add this instead:
 remote_theme: mmistakes/minimal-mistakes@4.27.3
