--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ sidebar:
       - "Simplifying complex ideas across tech, personal insights, and trending topics."
       - "Sharing practical tutorials and personal reflections."
       - "Highlighting emerging trends in technology and society."
-      - "Life may be unfair, but your happiness is in your hands."
+      - "Taking control of your own happiness, despite life's unfairness."
     image: "/assets/images/rakesh_headshot.jpg"  # place profile image here
     email: "tyataessence@gmail.com"
     address: "Seattle, WA, USA"
