--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ sidebar:
     email: "tyataessence@gmail.com"
     address: "Seattle, WA, USA"
     links:
-      View My Portfolio: "https://rtyata01.github.io/"
-      View My Youtube: "https://youtube.com/tyataessence"
-      View My Linkedin: "https://linkedin.com/in/rtyata"
+      Portfolio: "https://rtyata01.github.io/"
+      Youtube: "https://youtube.com/tyataessence"
+      Linkedin: "https://linkedin.com/in/rtyata"
   
   categories:
     - Personal
