--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Welcome to TyataEssence blog - a space where complexity meets clarity!
+title: Thank you for visiting TyataEssence blog - a space where complexity meets clarity!
 author: Rakesh Tyata
 email: tyataessence@gmail.com
 description: "This blog is about sharing ideas — it’s about creating a place where readers can slow down, think clearly, and discover meaningful perspectives in a fast-moving world."
