fixing youtube link

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ sidebar:
     address: "Seattle, WA, USA"
     links:
       Portfolio: "https://rtyata01.github.io/"
-      Youtube: "https://youtube.com/tyataessence"
+      Youtube: "https://www.youtube.com/@TyataEssence"
       Linkedin: "https://linkedin.com/in/rtyata"
   
   categories:
