updating the banner image

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ sidebar:
       - "Sharing practical tutorials and personal reflections."
       - "Highlighting emerging trends in technology and society."
       - "Taking control of your own happiness, despite life's unfairness."
-    image: "/assets/images/rakesh_headshot.jpg"  # place profile image here
+    image: "/assets/images/rakesh_headshot.jpg"  
     email: "tyataessence@gmail.com"
     address: "Seattle, WA, USA"
     links:
