adding insights folder

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ sidebar:
       Youtube: "https://www.youtube.com/@TyataEssence"
   
   categories:
+    - Insights
     - Personal
     - Technical
     - Trending
