--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ sidebar:
       Youtube: "https://www.youtube.com/@TyataEssence"
   
   categories:
+    - Career
+    - Financial
+    - Habits
     - Insights
     - Personal
     - Technical
