adding tiktok link

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ sidebar:
     links:
       Portfolio: "https://rtyata01.github.io/"
       Youtube: "https://www.youtube.com/@TyataEssence"
+      TikTok: "https://www.tiktok.com/@tyataessence"
   
   categories:
     - Career
